# groupchat

./: .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  dist-workspace.toml
.claude-plugin/: marketplace.json  plugin.json
.config/: nextest.toml
crates/runtime/: Cargo.toml
crates/runtime/src/: action.rs  beacon.rs  contact.rs  contact_driver.rs  coordinates.rs  dispatch_tests.rs  error.rs  lib.rs  lifecycle.rs  neighbor_presence.rs  neighbors.rs  session.rs  world.rs
crates/runtime/tests/: adoption.rs  beacon_presence_fixtures.rs  contact_fixtures.rs  contact_iroh.rs  contact_mem.rs  coordinates_fixtures.rs  independent_world.rs  observations.rs  public_lifecycle_api.rs
docs/: ARCHITECTURE.md  GUIDED-JOIN.md  HARDENING.md  INSTALL.md  README.md  RELEASE-SIGNING.md  ROADMAP.md  SCHEMA.md  SERVE.md  UI.md
hooks/: hooks.json
packaging/: README.md
src/: acl.rs  actor.rs  app.rs  authz.rs  call.rs  catalog.rs  cli.rs  cmdspec.rs  config.rs  control.rs  crypto.rs  diagnose.rs  doctor.rs  dto.rs  genesis.rs  ids.rs  inbox.rs  index.rs  install.rs  issue.rs  lib.rs  main.rs  mcp.rs  members_ui.rs  net.rs  node.rs  orbital.rs  proto.rs  registry.rs  replica.rs  secretfs.rs  sigdag.rs  space.rs  store.rs  sync.rs  tracker.rs
tests/: clean_break_allowlist.tsv  cli_parse.rs  cli_safety.rs  control_classification.rs  control_plane.rs  convergence.rs  frost_interop.rs  guided_join.rs  hermetic_net.rs  invite_autoapprove.rs  invite_ergonomics.rs  issues_reference_perf.rs  mcp_parity.rs  orbital_adoption.rs  orbital_ceremonies.rs  (+5 more)
(+123 files in other folders)
